--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.2
 backcall==0.2.0
+cycler==0.10.0
 decorator==5.0.7
 ipykernel==5.5.3
 ipython==7.22.0
@@ -8,14 +9,18 @@ jedi==0.18.0
 joblib==1.0.1
 jupyter-client==6.1.12
 jupyter-core==4.7.1
+kiwisolver==1.3.1
+matplotlib==3.4.1
 numpy==1.20.2
 pandas==1.2.4
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.2.0
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
 Pygments==2.8.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 pyzmq==22.0.3
